fix(dropdown): decrease right padding in dropdown toggle for optical alignment

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -120,7 +120,7 @@
   }
 
   .dropdown-toggle {
-    @apply flex items-center gap-3 py-2 px-4 border border-slate-300 shadow bg-white font-normal rounded-md focus:outline-none focus:border-indigo-500 dark:bg-slate-800 dark:border-slate-700 dark:focus:border-slate-600;
+    @apply flex items-center gap-3 py-2 pl-4 pr-3 border border-slate-300 shadow bg-white font-normal rounded-md focus:outline-none focus:border-indigo-500 dark:bg-slate-800 dark:border-slate-700 dark:focus:border-slate-600;
   }
 
   .dropdown-menu {
